<resources>
    <string name="app_name">Simple Market</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="re_type_password">re-type password</string>
    <string name="login">Login</string>
    <string name="mendaftar_sebagai">mendaftar sebagai :</string>
    <string name="mohon_menunggu">Mohon Menunggu . . .</string>
    <string name="cari_market_terdekat">Cari Market Terdekat</string>
    <string name="lihat_lokasi">lihat semua lokasi market yang didaftarkan</string>
    <string name="rorem">lorem ipsum dolor sit amet from deep in the dark</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="pilih_lokasi_ini">pilih lokasi ini</string>
    <string name="masukkan_nama_lokasi">masukkan nama lokasi</string>
    <string name="pilih_lokasi_baru">Tambah Lokasi Baru</string>
    <string name="tekan_lama_pada_pointer_map_kemudian_geser">tekan lama pada pointer map kemudian geser</string>
    <string name="masukkan_detail_lokasi">masukkan detail lokasi</string>
    <string name="batal">Batal</string>
    <string name="gotoloc">Pergi ke Lokasi ini?</string>
    <string name="pergi">Pergi</string>
    <string-array name="asuser">
        <item>biasa</item>
        <item>merchant</item>
    </string-array>
</resources>