<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_lokasi_baru"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tekan_lama_pada_pointer_map_kemudian_geser"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <fragment
        android:id="@+id/frmap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>
    <EditText
        android:id="@+id/etNamaLokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/masukkan_nama_lokasi"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/etDetailLokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/masukkan_detail_lokasi"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pilih_lokasi_ini"
            android:background="@drawable/shape_round2"
            android:textColor="@android:color/white"
            android:layout_marginEnd="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/batal"
            android:background="@drawable/shape_round3"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</LinearLayout>