<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:layout_margin="10dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoloc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOke"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_round2"
            android:text="@string/pergi"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="5dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBatal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_round"
            android:text="@string/batal"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</LinearLayout>